v0.3.1/_sources/gallery/embellishments/logo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/embellishments/logo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_embellishments_logo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_embellishments_logo.py:


Logo
----

The :meth:`pygmt.Figure.logo` method allows to place the GMT logo on a map.  

.. GENERATED FROM PYTHON SOURCE LINES 7-19



.. image:: /gallery/embellishments/images/sphx_glr_logo_001.png
    :alt: logo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default


    import pygmt

    fig = pygmt.Figure()
    fig.basemap(region=[0, 10, 0, 2], projection="X6c", frame=True)

    # add the GMT logo in the Top Right corner of the current map,
    # scaled up to be 3 cm wide and offset by 0.3 cm in X direction
    # and 0.6 cm in Y direction.
    fig.logo(position="jTR+o0.3c/0.6c+w3c")

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.398 seconds)


.. _sphx_glr_download_gallery_embellishments_logo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: logo.py <logo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: logo.ipynb <logo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
